éviter faille XSS injection html dans galerie

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/allResa">Les réservations</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" data-show="connected">
                             <a class="nav-link" href="/account">Mon compte</a>
                         </li>
                         <li class="nav-item" data-show="disconnected">
