--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -9,60 +9,9 @@
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter
             une photo</button>
     </div>
-    <div class="row row-cols-2 row-cols-lg-3">
+    <div class="row row-cols-2 row-cols-lg-3" id="allImages">
 
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/mediterranean-cuisine.jpg" alt="Des légumes et épices" class="rounded w-100">
-                <p class="titre-image">Images 1</p>
-                <div class="action-class-buttons" data-show="admin">
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
-                        data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
-                    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal"
-                        data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
-                </div>
-            </div>
-        </div>
-
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/garlic.jpg" alt="Fenêtre" class="rounded w-100">
-                <p class="titre-image">Images 2</p>
-
-            </div>
-        </div>
-
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/kitchen.jpg" alt="Cuisine" class="rounded w-100">
-                <p class="titre-image">Images 3</p>
-
-            </div>
-        </div>
-
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/platter.jpg" alt="Nourriture" class="rounded w-100">
-                <p class="titre-image">Images 4</p>
-
-            </div>
-        </div>
-
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/spices.jpg" alt="épices" class="rounded w-100">
-                <p class="titre-image">Images 5</p>
-
-            </div>
-        </div>
-
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="/images/meat.jpg" alt="Steack" class="rounded w-100">
-                <p class="titre-image">Images 6</p>
-
-            </div>
-        </div>
+       
 
     </div>
     <div class="text-center">
